tests/functional2/lang/recursion/eval-fail.err.exp
error:
       … while evaluating an expression to select 'foo' on it
         at /pwd/in.nix:1:21:
            1| let a = {} // a; in a.foo
             |                     ^
            2|

       … while evaluating a
         at /pwd/in.nix:1:21:
            1| let a = {} // a; in a.foo
             |                     ^
            2|

       … while evaluating a
         at /pwd/in.nix:1:15:
            1| let a = {} // a; in a.foo
             |               ^
            2|

       error: infinite recursion encountered
       at /pwd/in.nix:1:15:
            1| let a = {} // a; in a.foo
             |               ^
            2|
